--- a/vacation.html
+++ b/vacation.html
@@ -41,7 +41,7 @@
     <label for="endDate"><strong>전역 또는 종료 날짜:</strong></label>
     <input type="date" id="endDate" onchange="calculate()" required />
     <br />
-    <label for="vacationDays"><strong>총 휴가 일수:</strong></label>
+    <label for="vacationDays"><strong>나가는 휴가 일수:</strong></label>
     <input type="number" id="vacationDays" onchange="calculate()" required />
     <br />
     <p style="color: #777">(C) 2025 SSAZIBANG-NAVY</p>
