--- a/vacation.html
+++ b/vacation.html
@@ -34,7 +34,7 @@
         padding: 10px;
         border: 1px solid #ddd;
         font-size: 14px;
-        height: 50px;
+        /*height: 50px;*/
         display: flex;
         justify-content: center;
         align-items: center;
