fix: Miss calendar styles

--- a/vacation.html
+++ b/vacation.html
@@ -49,6 +49,25 @@
         background-color: #0098ff85;
         color: white;
       }
+
+      .calendar-header {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+        align-items: center;
+      }
+
+      .calendar-header button {
+        background-color: #ddd;
+        border: none;
+        padding: 5px 10px;
+        cursor: pointer;
+      }
+
+      .calendar-header span {
+        font-size: 18px;
+        font-weight: bold;
+      }
     </style>
     <script type="application/ld+json">
     {
