--- a/vacation.html
+++ b/vacation.html
@@ -15,7 +15,9 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        margin: 20px;
+        margin: 0 auto;
+        padding: 20px;
+        max-width: 800px;
       }
   
       input {
