--- a/vacation.html
+++ b/vacation.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="전입 날짜와 전역 날짜를 입력하여 손쉽게 해군과 공군의 총 휴가 기간을 계산해보세요!" />
+    <meta
+      name="description"
+      content="전입 날짜와 전역 날짜를 입력하여 손쉽게 해군과 공군의 총 휴가 기간을 계산해보세요!"
+    />
     <meta name="keywords" content="해군, 공군, 휴가, 계산기, 전입 날짜, 종료 날짜" />
     <meta name="author" content="ssazibang-navy" />
     <meta property="og:title" content="해군/공군 휴가 계산기 - 총 휴가 일수 계산" />
-    <meta property="og:description" content="전입 날짜와 전역 날짜를 입력하여 손쉽게 해군과 공군의 총 휴가 기간을 계산해보세요!" />
+    <meta
+      property="og:description"
+      content="전입 날짜와 전역 날짜를 입력하여 손쉽게 해군과 공군의 총 휴가 기간을 계산해보세요!"
+    />
     <meta property="og:image" content="https://ssazibang-navy.github.io/vacation.png" />
     <meta property="og:url" content="https://ssazibang-navy.github.io/vacation.html" />
     <link rel="canonical" href="https://ssazibang-navy.github.io/vacation.html" />
@@ -19,18 +25,18 @@
         padding: 20px;
         max-width: 800px;
       }
-  
+
       input {
         margin: 5px 0;
       }
-  
+
       .calendar {
         display: grid;
         grid-template-columns: repeat(7, 1fr);
         grid-gap: 5px;
         margin-top: 20px;
       }
-  
+
       .calendar div {
         text-align: center;
         padding: 10px;
@@ -41,7 +47,7 @@
         justify-content: center;
         align-items: center;
       }
-  
+
       .calendar .holiday {
         background-color: #0098ff;
         color: white;
@@ -70,16 +76,26 @@
         font-size: 18px;
         font-weight: bold;
       }
+
+      .vacation-tag {
+        display: inline-block;
+        margin: 4px 6px 4px 0;
+        padding: 4px 8px;
+        border-radius: 4px;
+        background-color: rgb(51 93 255 / 10%);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        font-size: 14px;
+      }
     </style>
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebApplication",
-      "name": "해군/공군 휴가 계산기",
-      "description": "전입 날짜와 전역 날짜를 입력하여 손쉽게 해군과 공군의 총 휴가 기간을 계산해보세요.",
-      "url": "https://ssazibang-navy.github.io/vacation.html",
-      "applicationCategory": "Utility"
-    }
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "해군/공군 휴가 계산기",
+        "description": "전입 날짜와 전역 날짜를 입력하여 손쉽게 해군과 공군의 총 휴가 기간을 계산해보세요.",
+        "url": "https://ssazibang-navy.github.io/vacation.html",
+        "applicationCategory": "Utility"
+      }
     </script>
   </head>
   <body>
@@ -93,6 +109,7 @@
     <br />
     <label for="vacationDays"><strong>나가는 휴가 일수:</strong></label>
     <input type="number" id="vacationDays" onchange="calculate()" required />
+    <div id="vacationSummary" style="padding-block: 20px; font-weight: bold"></div>
     <hr />
     <div id="calendarContainer"></div>
     <script>
@@ -143,6 +160,48 @@
         calendarContainer.innerHTML = "";
 
         createCalendar(calendarContainer);
+
+        const vacationSummary = document.getElementById("vacationSummary");
+
+        const holidays = holidayDates
+          .filter((d) => d.type === "holiday")
+          .sort((a, b) => new Date(a.year, a.month - 1, a.day) - new Date(b.year, b.month - 1, b.day));
+
+        // 연속 날짜 구간 묶기
+        const formattedRanges = [];
+        if (holidays.length > 0) {
+          let start = holidays[0];
+          let end = holidays[0];
+
+          for (let i = 1; i < holidays.length; i++) {
+            const current = holidays[i];
+            const prevDate = new Date(end.year, end.month - 1, end.day);
+            const currentDate = new Date(current.year, current.month - 1, current.day);
+            const diff = (currentDate - prevDate) / (1000 * 60 * 60 * 24);
+
+            if (diff === 1) {
+              end = current;
+            } else {
+              formattedRanges.push(formatRange(start, end));
+              start = end = current;
+            }
+          }
+          formattedRanges.push(formatRange(start, end));
+        }
+
+        function formatRange(start, end) {
+          const format = (d) => `${d.month}.${d.day}`;
+          return start.year === end.year && start.month === end.month && start.day === end.day
+            ? format(start)
+            : `${format(start)} ~ ${format(end)}`;
+        }
+
+        if (formattedRanges.length > 0) {
+          const tagsHtml = formattedRanges.map((range) => `<span class="vacation-tag">${range}</span>`).join(" ");
+          vacationSummary.innerHTML = `예상 휴가 날짜: ${tagsHtml}`;
+        } else {
+          vacationSummary.textContent = "";
+        }
       }
 
       function createCalendar(container) {
@@ -215,7 +274,10 @@
         const month = date.getMonth() + 1;
         const day = date.getDate();
 
-        return holidayDates.some((holiday) => holiday.year === year && holiday.month === month && holiday.day === day && holiday.type === "holiday");
+        return holidayDates.some(
+          (holiday) =>
+            holiday.year === year && holiday.month === month && holiday.day === day && holiday.type === "holiday",
+        );
       }
 
       function isBeforeHoliday(date) {
@@ -223,7 +285,10 @@
         const month = date.getMonth() + 1;
         const day = date.getDate();
 
-        return holidayDates.some((holiday) => holiday.year === year && holiday.month === month && holiday.day === day && holiday.type === "beforeHoliday");
+        return holidayDates.some(
+          (holiday) =>
+            holiday.year === year && holiday.month === month && holiday.day === day && holiday.type === "beforeHoliday",
+        );
       }
 
       function prevMonth() {
